--- a/plugin.cfg
+++ b/plugin.cfg
@@ -3,7 +3,7 @@ NAME=Christian Woerstenfeld
 EMAIL=git@loxberry.woerstenfeld.de
 
 [PLUGIN]
-VERSION=v2018.12.23
+VERSION=2021.03.18
 
 NAME=DNSmasq
 FOLDER=dnsmasq
