--- a/release.cfg
+++ b/release.cfg
@@ -6,10 +6,10 @@
 # If your plugin offers automatic updates, please enable the following option.
 
 # Version of the new release
-VERSION=v2018.12.23
+VERSION=2021.03.18
 
 # Download URL of the ZIP Archive
-ARCHIVEURL=https://github.com/Woersty/LoxBerry-Plugin-DNSmasq/archive/v2018.12.23.zip
+ARCHIVEURL=https://github.com/Woersty/LoxBerry-Plugin-DNSmasq/archive/2021.03.18.zip
 
 # URL for further information about this release
-INFOURL=https://github.com/Woersty/LoxBerry-Plugin-DNSmasq/releases/tag/v2018.12.23
+INFOURL=https://github.com/Woersty/LoxBerry-Plugin-DNSmasq/releases/tag/2021.03.18
